[package]
name = "rust-gw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
actix-web = "3"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"
crossbeam = "0.8"
signal-hook = "0.3"